tests/errors/err-lddw-second-half-invalid.data
-- raw
0x0000000000000018
0x0000000000000100
0x0000000000000095
-- error
Failed to load code: invalid lddw second half at PC 1
